--- a/DesctopHITE/PerformanceFolder/PageFolder/WorkerPageFolder/NewWorkerPage.xaml
+++ b/DesctopHITE/PerformanceFolder/PageFolder/WorkerPageFolder/NewWorkerPage.xaml
@@ -206,7 +206,7 @@
                                 <StackPanel Margin="0 10 0 0" Orientation="Vertical" VerticalAlignment="Top" HorizontalAlignment="Center">
                                     <Image
                                         x:Name="UserPhotoImage"
-                                        Source="\ContentFolder\ImageFolder\NoImage.png"
+                                        Source="{Binding PassportTable.ImagePassportTable.Image_ImagePassport}"
                                         Width="180"
                                         Stretch="Uniform"
                                         Height="240"
