--- a/DesctopHITE/PerformanceFolder/WindowsFolder/DeliteWorkerWindow.xaml
+++ b/DesctopHITE/PerformanceFolder/WindowsFolder/DeliteWorkerWindow.xaml
@@ -7,7 +7,7 @@
     mc:Ignorable="d"
     WindowStartupLocation="CenterScreen"
     Style="{DynamicResource AuthorizationWindowStyle}">
-    <Border BorderBrush="#462AD8" BorderThickness="1" Style="{DynamicResource MainBorderStyle}">
+    <Border BorderBrush="#2a2a2a" BorderThickness="1" Style="{DynamicResource MainBorderStyle}">
         <Grid>
             <Grid.RowDefinitions>
                 <RowDefinition Height="30"/>
