--- a/DesctopHITE/PerformanceFolder/PageFolder/WorkerPageFolder/NewWorkerPage.xaml
+++ b/DesctopHITE/PerformanceFolder/PageFolder/WorkerPageFolder/NewWorkerPage.xaml
@@ -26,7 +26,7 @@
             <ToggleButton
                 x:Name="MedicalBookToggleButton"
                 Click="MedicalBookToggleButton_Click"
-                Content="Медецинская книжка"
+                Content="медицинская книжка"
                 Style="{DynamicResource MainMenuToggleButtonStyle}"/>
             <ToggleButton
                 x:Name="SnilsToggleButton"
@@ -586,7 +586,7 @@
                     <StackPanel Margin="10" Orientation="Vertical" VerticalAlignment="Center" HorizontalAlignment="Center">
                         <TextBlock
                             Foreground="#462AD8"
-                            Text="Медецинская книжка"
+                            Text="медицинская книжка"
                             Style="{DynamicResource MainStyleTextBlock}"
                             FontSize="30"
                             Margin="0 10 0 10"/>
@@ -594,7 +594,7 @@
                             <TextBlock
                                 HorizontalAlignment="Center"
                                 Margin="0"
-                                Text="Номер медецинской книжки"
+                                Text="Номер медицинской книжки"
                                 Style="{DynamicResource TextBlockDominatesTextBoxTextBlock}"/>
                             <Grid>
                                 <Border Style="{DynamicResource OtherShadowBorder}">
@@ -621,7 +621,7 @@
                         <StackPanel Style="{DynamicResource TextBlockDominatesTextBoxStackPanel}">
                             <TextBlock
                                 Style="{DynamicResource TextBlockDominatesTextBoxTextBlock}"
-                                Text="Личная медецинская книжка выдана"/>
+                                Text="Личная медицинская книжка выдана"/>
                             <Grid   >
                                 <Border    Style="{DynamicResource OtherShadowBorder}">
                                     <Border.Effect>
@@ -697,7 +697,7 @@
                         <StackPanel Style="{DynamicResource TextBlockDominatesTextBoxStackPanel}">
                             <TextBlock
                                 Style="{DynamicResource TextBlockDominatesTextBoxTextBlock}"
-                                Text="Домашний адресс"/>
+                                Text="Домашний адрес"/>
                             <Grid   >
                                 <Border    Style="{DynamicResource OtherShadowBorder}">
                                     <Border.Effect>
@@ -745,7 +745,7 @@
                         <StackPanel Margin="0 5 0 0" Style="{DynamicResource TextBlockDominatesTextBoxStackPanel}">
                             <TextBlock
                                 Style="{DynamicResource TextBlockDominatesTextBoxTextBlock}"
-                                Text="Огранизация (индивидуальный предприниматель)"/>
+                                Text="Организация (индивидуальный предприниматель)"/>
                             <Grid   >
                                 <Border    Style="{DynamicResource OtherShadowBorder}">
                                     <Border.Effect>
@@ -897,7 +897,7 @@
                         <StackPanel Margin="0 5 0 0" Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Center">
                             <StackPanel Margin="0 0 10 0" Style="{DynamicResource TextBlockDominatesTextBoxStackPanel}">
                                 <TextBlock
-                                    Text="Налоговый огран"
+                                    Text="Налоговый орган"
                                     Style="{DynamicResource TextBlockDominatesTextBoxTextBlock}"/>
                                 <Grid   >
                                     <Border Style="{DynamicResource OtherShadowBorder}">
@@ -986,7 +986,7 @@
                             <StackPanel Margin="0 5 0 5" Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Center">
                                 <StackPanel Margin="0 0 20 0" Style="{DynamicResource TextBlockDominatesTextBoxStackPanel}">
                                     <TextBlock 
-                                        Text="Фимилия (Eng)"
+                                        Text="Фамилия (Eng)"
                                         Style="{DynamicResource TextBlockDominatesTextBoxTextBlock}"/>
                                     <Grid>
                                         <Border Style="{DynamicResource OtherShadowBorder}">
