--- a/DesctopHITE/PerformanceFolder/PageFolder/WorkerPageFolder/ListWorkerPage.xaml
+++ b/DesctopHITE/PerformanceFolder/PageFolder/WorkerPageFolder/ListWorkerPage.xaml
@@ -48,7 +48,7 @@
                     Width="220"
                     Height="45"
                     Margin="0 0 5 0">
-                    <StackPanel Orientation="Horizontal">
+                    <StackPanel Margin="0 5 0 5" Orientation="Horizontal">
                         <TextBlock
                             Text="&#xf158;" 
                             Style="{DynamicResource IconTextBlockStyle}"
@@ -64,7 +64,7 @@
                     Click="ActionDeliteWorker"
                     Width="180"
                     Height="45">
-                    <StackPanel Orientation="Horizontal">
+                    <StackPanel Margin="0 5 0 5" Orientation="Horizontal">
                         <TextBlock
                             Text="&#xF154;" 
                             Style="{DynamicResource IconTextBlockStyle}"
