--- a/DesctopHITE/PerformanceFolder/PageFolder/WorkerPageFolder/NewWorkerPage.xaml
+++ b/DesctopHITE/PerformanceFolder/PageFolder/WorkerPageFolder/NewWorkerPage.xaml
@@ -51,7 +51,7 @@
         </StackPanel>
         <ScrollViewer Grid.Column="1">
             <StackPanel x:Name="MainStackPanel" Margin="0 10 0 20" VerticalAlignment="Top" HorizontalAlignment="Center">
-                <Border x:Name="PassportBorder" Style="{DynamicResource BorderInformation}" Margin="0 0 0 10">
+                <Border x:Name="PassportBorder" Visibility="Visible" Style="{DynamicResource BorderInformation}" Margin="0 0 0 10">
                     <StackPanel Margin="10">
                         <TextBlock
                             Foreground="#462AD8"
@@ -1303,7 +1303,7 @@
                             Click="NewWorkerButton_Click"
                             Width="350"
                             Height="50">
-                            <StackPanel Orientation="Horizontal">
+                            <StackPanel Margin="0 5 0 5" Orientation="Horizontal">
                                 <TextBlock
                                     x:Name="TitleIconNewWorkerTextBlock1"
                                     Text="&#xf1ff;" 
