--- a/DesctopHITE/AppDateFolder/StyleFolder/PasswordBoxDictionary.xaml
+++ b/DesctopHITE/AppDateFolder/StyleFolder/PasswordBoxDictionary.xaml
@@ -5,9 +5,9 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     
     <Style x:Key="MainPasswordBoxStyle" TargetType="PasswordBox">
-        <Setter Property="Foreground" Value="#FFFFFF"/>
+        <Setter Property="Foreground" Value="#8c8a8c"/>
         <Setter Property="Background" Value="#202020"/>
-        <Setter Property="CaretBrush" Value="#ffffff"/>
+        <Setter Property="CaretBrush" Value="#f5f5f5"/>
         <Setter Property="BorderBrush" Value="#202020"/>
         <Setter Property="BorderThickness" Value="0.5"/>
         <Setter Property="VerticalAlignment" Value="Center"/>
@@ -37,8 +37,10 @@
                     <ControlTemplate.Triggers>
                         <Trigger Property="IsMouseOver" Value="True">
                             <Setter Property="Cursor" Value="IBeam"/>
+                            <Setter Property="Foreground" Value="#b8b8b8"/>
                         </Trigger>
                         <Trigger Property="IsFocused" Value="true">
+                            <Setter Property="Foreground" Value="#f5f5f5"/>
                             <Setter Property="Background" Value="#2a2a2a"/>
                         </Trigger>
                         <Trigger Property="IsEnabled" Value="False">
