--- a/DesctopHITE/AppDateFolder/StyleFolder/TextBlockDictionary.xaml
+++ b/DesctopHITE/AppDateFolder/StyleFolder/TextBlockDictionary.xaml
@@ -53,7 +53,11 @@
         <Setter Property="FontSize" Value="15"/>
         <Setter Property="VerticalAlignment" Value="Center"/>
     </Style>
-    
+
+    <Style x:Key="OtherStyleTextBlock" TargetType="TextBlock" BasedOn="{StaticResource MainStyleTextBlock}">
+        <Setter Property="Foreground" Value="#8c8a8c"/>
+    </Style>
+     
     <Style x:Key="TextBlockDominatesTextBoxTextBlock" TargetType="TextBlock" BasedOn="{StaticResource MainStyleTextBlock}">
         <Setter Property="Margin" Value="12 0 0 0"/>
         <Setter Property="HorizontalAlignment" Value="Left"/>
