--- a/DesctopHITE/PerformanceFolder/PageFolder/WorkerPageFolder/ViewInformationWorkerPage.xaml
+++ b/DesctopHITE/PerformanceFolder/PageFolder/WorkerPageFolder/ViewInformationWorkerPage.xaml
@@ -25,7 +25,7 @@
             <ToggleButton
                 x:Name="MedicalBookToggleButton"
                 Click="MedicalBookToggleButton_Click"
-                Content="медицинская книжка"
+                Content="Медицинская книжка"
                 Style="{DynamicResource MainMenuToggleButtonStyle}"/>
             <ToggleButton
                 x:Name="SnilsToggleButton"
@@ -75,11 +75,11 @@
                             <StackPanel Grid.Column="1" Orientation="Vertical" VerticalAlignment="Top" HorizontalAlignment="Left">
                                 <StackPanel Margin="0 0 0 3" Orientation="Horizontal">
                                     <TextBlock 
-                                        Margin="0 0 2 0"
+                                        Margin="0 0 3.5 0"
                                         Style="{DynamicResource MainStyleTextBlock}"
                                         Text="Паспорт выдан:"/>
                                     <TextBlock
-                                        Margin="2 0 0 0"
+                                        Margin="3.5 0 0 0"
                                         MinWidth="0"
                                         Width="Auto"
                                         MaxWidth="400"
@@ -87,103 +87,103 @@
                                         Style="{DynamicResource OtherStyleTextBlock}"
                                         Text="{Binding PassportTable.Issued_Passport}"/>
                                 </StackPanel>
-                                <StackPanel Margin="0 3 0 3" Orientation="Horizontal">
+                                <StackPanel Margin="0 3.5 0 3.5" Orientation="Horizontal">
                                     <TextBlock 
-                                        Margin="0 0 2 0"
+                                        Margin="0 0 3.5 0"
                                         Style="{DynamicResource MainStyleTextBlock}"
                                         Text="Дата выдачи:"/>
                                     <TextBlock
-                                        Margin="2 0 0 0"
+                                        Margin="3.5 0 0 0"
                                         Style="{DynamicResource OtherStyleTextBlock}"
                                         Text="{Binding PassportTable.DateIssued_Passport, StringFormat='{}{0:dd/MM/yyyy}'}"/>
                                 </StackPanel>
-                                <StackPanel Margin="0 3 0 3" Orientation="Horizontal">
+                                <StackPanel Margin="0 3.5 0 3.5" Orientation="Horizontal">
                                     <TextBlock 
-                                        Margin="0 0 2 0"
+                                        Margin="0 0 3.5 0"
                                         Style="{DynamicResource MainStyleTextBlock}"
                                         Text="Серия паспорта:"/>
                                     <TextBlock
-                                        Margin="2 0 0 0"
+                                        Margin="3.5 0 0 0"
                                         Style="{DynamicResource OtherStyleTextBlock}"
                                         Text="{Binding PassportTable.Series_Passport}"/>
                                 </StackPanel>
-                                <StackPanel Margin="0 3 0 3" Orientation="Horizontal">
+                                <StackPanel Margin="0 3.5 0 3.5" Orientation="Horizontal">
                                     <TextBlock 
-                                        Margin="0 0 2 0"
+                                        Margin="0 0 3.5 0"
                                         Style="{DynamicResource MainStyleTextBlock}"
                                         Text="Номер паспорта:"/>
                                     <TextBlock
-                                        Margin="2 0 0 0"
+                                        Margin="3.5 0 0 0"
                                         Style="{DynamicResource OtherStyleTextBlock}"
                                         Text="{Binding PassportTable.Number_Passport}"/>
                                 </StackPanel>
-                                <StackPanel Margin="0 3 0 3" Orientation="Horizontal">
+                                <StackPanel Margin="0 3.5 0 3.5" Orientation="Horizontal">
                                     <TextBlock 
-                                        Margin="0 0 2 0"
+                                        Margin="0 0 3.5 0"
                                         Style="{DynamicResource MainStyleTextBlock}"
                                         Text="Код подразделения:"/>
                                     <TextBlock
-                                        Margin="2 0 0 0"
+                                        Margin="3.5 0 0 0"
                                         Style="{DynamicResource OtherStyleTextBlock}"
                                         Text="{Binding PassportTable.DivisionCode_Passport}"/>
                                 </StackPanel>
-                                <StackPanel Margin="0 3 0 3" Orientation="Horizontal">
+                                <StackPanel Margin="0 3.5 0 3.5" Orientation="Horizontal">
                                     <TextBlock 
-                                        Margin="0 0 2 0"
+                                        Margin="0 0 3.5 0"
                                         Style="{DynamicResource MainStyleTextBlock}"
                                         Text="Фамилия:"/>
                                     <TextBlock
-                                        Margin="2 0 0 0"
+                                        Margin="3.5 0 0 0"
                                         Style="{DynamicResource OtherStyleTextBlock}"
                                         Text="{Binding PassportTable.Surname_Passport}"/>
                                 </StackPanel>
-                                <StackPanel Margin="0 3 0 3" Orientation="Horizontal">
+                                <StackPanel Margin="0 3.5 0 3.5" Orientation="Horizontal">
                                     <TextBlock 
-                                        Margin="0 0 2 0"
+                                        Margin="0 0 3.5 0"
                                         Style="{DynamicResource MainStyleTextBlock}"
                                         Text="Имя:"/>
                                     <TextBlock
-                                        Margin="2 0 0 0"
+                                        Margin="3.5 0 0 0"
                                         Style="{DynamicResource OtherStyleTextBlock}"
                                         Text="{Binding PassportTable.Name_Passport}"/>
                                 </StackPanel>
-                                <StackPanel Margin="0 3 0 3" Orientation="Horizontal">
+                                <StackPanel Margin="0 3.5 0 3.5" Orientation="Horizontal">
                                     <TextBlock 
-                                        Margin="0 0 2 0"
+                                        Margin="0 0 3.5 0"
                                         Style="{DynamicResource MainStyleTextBlock}"
                                         Text="Отчество:"/>
                                     <TextBlock
-                                        Margin="2 0 0 0"
+                                        Margin="3.5 0 0 0"
                                         Style="{DynamicResource OtherStyleTextBlock}"
                                         Text="{Binding PassportTable.Middlename_Passport}"/>
                                 </StackPanel>
-                                <StackPanel Margin="0 3 0 3" Orientation="Horizontal">
+                                <StackPanel Margin="0 3.5 0 3.5" Orientation="Horizontal">
                                     <TextBlock 
-                                        Margin="0 0 2 0"
+                                        Margin="0 0 3.5 0"
                                         Style="{DynamicResource MainStyleTextBlock}"
                                         Text="Пол:"/>
                                     <TextBlock
-                                        Margin="2 0 0 0"
+                                        Margin="3.5 0 0 0"
                                         Style="{DynamicResource OtherStyleTextBlock}"
                                         Text="{Binding PassportTable.GenderTable.Title_Gender}"/>
                                 </StackPanel>
-                                <StackPanel Margin="0 3 0 3" Orientation="Horizontal">
+                                <StackPanel Margin="0 3.5 0 3.5" Orientation="Horizontal">
                                     <TextBlock 
-                                        Margin="0 0 2 0"
+                                        Margin="0 0 3.5 0"
                                         Style="{DynamicResource MainStyleTextBlock}"
                                         Text="Дата рождения:"/>
                                     <TextBlock
-                                        Margin="2 0 0 0"
+                                        Margin="3.5 0 0 0"
                                         Style="{DynamicResource OtherStyleTextBlock}"
                                         Text="{Binding PassportTable.DateOfBrich_Passport, StringFormat='{}{0:dd/MM/yyyy}'}"/>
                                 </StackPanel>
                                 <StackPanel Margin="0 3 0 0" Orientation="Horizontal">
                                     <TextBlock 
-                                        Margin="0 0 2 0"
+                                        Margin="0 0 3.5 0"
                                         Style="{DynamicResource MainStyleTextBlock}"
                                         Text="Место рождения:"/>
                                     <TextBlock
-                                        Margin="2 0 0 0"
+                                        Margin="3.5 0 0 0"
                                         MinWidth="0"
                                         Width="Auto"
                                         MaxWidth="400"
@@ -212,7 +212,7 @@
                     <StackPanel Margin="10" Orientation="Vertical" VerticalAlignment="Center" HorizontalAlignment="Center">
                         <TextBlock
                             Foreground="#462AD8"
-                            Text="медицинская книжка"
+                            Text="Медицинская книжка"
                             Style="{DynamicResource MainStyleTextBlock}"
                             FontSize="30"
                             Margin="0 10 0 10"/>
@@ -290,7 +290,7 @@
                             Click="EditWorkerButton_Click"
                             Width="350"
                             Height="50">
-                            <StackPanel Margin="0 3 0 3" Orientation="Horizontal">
+                            <StackPanel Margin="0 3.5 0 3.5" Orientation="Horizontal">
                                 <TextBlock
                                     Text="&#xf158;" 
                                     Style="{DynamicResource IconTextBlockStyle}"
